Add AWS SAA notes jump section

--- a/index.html
+++ b/index.html
@@ -47,6 +47,17 @@ body {
 }</style>
 </head>
 <body class="home wp-singular page-template-default page page-id-101 wp-embed-responsive wp-theme-hello-elementor ehf-header ehf-footer ehf-template-hello-elementor ehf-stylesheet-hello-elementor theme-default elementor-default elementor-kit-169 elementor-page elementor-page-101">
+<!-- AWS SAA 合格笔记区块 Start -->
+<section id="memo" style="padding: 40px 0; text-align: center; background-color: #fdfdfd;">
+    <h2 style="font-size: 24px; margin-bottom: 12px;">📘 AWS SAA 合格笔记</h2>
+    <p style="max-width: 600px; margin: 0 auto 24px; font-size: 16px; color: #666;">
+      本页面整理了我通过 AWS SAA 认证过程中的学习重点与考点总结，是我作为云初学者动手实践与吸收知识的过程记录。
+    </p>
+    <a href="./aws-saa-notes/" style="font-size: 18px; text-decoration: none; background-color: #ffffff; border: 1px solid #ccc; padding: 12px 24px; border-radius: 8px; display: inline-block; color: #333; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+      👉 点击查看完整笔记页面
+    </a>
+  </section>
+  <!-- AWS SAA 合格笔记区块 End -->
 <div id="page" class="hfeed site">
 <header id="masthead" itemscope="itemscope" itemtype="https://schema.org/WPHeader"><p class="main-title bhf-hidden" itemprop="headline"><a href="/" title="Memo &amp; Motion" rel="home">Memo &amp; Motion</a></p>
 <div data-elementor-type="wp-post" data-elementor-id="348" class="elementor elementor-348"><div class="elementor-element elementor-element-9373f4a e-flex e-con-boxed e-con e-parent" data-id="9373f4a" data-element_type="container"><div class="e-con-inner">
